# selinux

libselinux/: .gitignore  Makefile.am  configure.ac
libselinux/include/: Makefile.am
libselinux/src/: Makefile.am
libselinux/utils/: Makefile.am
libsepol/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
libsepol/cil/include/: Makefile.am
libsepol/cil/src/: Makefile.am
libsepol/include/: Makefile.am
libsepol/src/: Makefile.am
libsepol/utils/: Makefile.am
